--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,6 @@
         <item>Due Receive</item>
     </string-array>
 
+    <string name="WEBSITE_ADDRESS">https://www.tssouthernpower.com/CPDCL_Home.portal;jsessionid=Fs8xbGTBtJPnnFyF9VrcQyGSPyChhQVmGBQh28fv03QNdSFLMHvN!-1374925354?_nfpb=true&amp;_pageLabel=CPDCL_Home_portal_page_289</string>
+
 </resources>
