fixed the sales issues.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="s_no">S.No.</string>
     <string name="names">Names</string>
     <string name="date">DATE</string>
-    <string name="total_blocks">ICE</string>
+    <string name="total_blocks">Blocks</string>
     <string name="labour_charges"><![CDATA[Labour \u20B9]]></string>
     <string name="total_amount"><![CDATA[ Total \u20B9]]></string>
     <string name="paid_amount"><![CDATA[Paid \u20B9]]></string>
